Completed the exercise and fixed typos in the 'TodoList.css' file

--- a/src/Components/TodoList.css
+++ b/src/Components/TodoList.css
@@ -91,8 +91,9 @@
     justify-content: center;
 }
 
-.delete-button:hover {
+.delete-button-heading:hover {
     background-color: #d32f2f;
+    cursor: pointer;
 }
 
 .list-input {
